# Phase_3_Chatbot_AI

./: .gitignore
.claude/: settings.local.json
.claude/agents/: architecture-planner.md  auth-guardian.md  backend-api-agent.md  db-schema-architect.md  docs-maintainer.md  frontend-api-guardian.md  nextjs-ui-architect.md  project-orchestrator.md  spec-analyzer.md  task-state-ops.md  testing-agent.md
.claude/skills/next.js/: skills.md
.specify/memory/: constitution.md
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt  run_server.py  test_main.py  tmpclaude-10cc-cwd
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  auth.py  deps.py  tasks.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: task.py  user.py
backend/app/schemas/: task.py  user.py
backend/app/services/: task.py  user.py
backend/docs/: openapi.json
backend/tests/: test_main.py
frontend/: CLAUDE.md  middleware.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(protected)/: layout.tsx
frontend/components/: FilterTabs.tsx  Navbar.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx  ToastHost.tsx
frontend/styles/: globals.css
frontend/types/: task.ts  user.ts
specs/: overview.md
specs/001-todo-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-premium-todo-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-todo-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+44 files in other folders)
